--- a/WebApp/frontend/quiz-master/app/globals.css
+++ b/WebApp/frontend/quiz-master/app/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.mantine-TextInput-input {
+	height: 46px !important;
+
+	padding-left: 20px !important;
+}
+
+.mantine-PasswordInput-input {
+	height: 46px !important;
+	padding-left: 20px !important;
+}
+
+.mantine-PasswordInput-innerInput {
+	height: 46px !important;
+	padding-left: 20px !important;
+}
