fix: Fix primary color.

--- a/WebApp/frontend/quiz-master/app/globals.css
+++ b/WebApp/frontend/quiz-master/app/globals.css
@@ -6,7 +6,7 @@
     --foreground-rgb: 0, 0, 0;
     --background-start-rgb: 214, 219, 220;
     --background-end-rgb: 255, 255, 255;
-    --primary: #358c5b;
+    --primary: #17a14b;
     --primary-800: #0b2e02;
     --primary-700: #104502;
     --primary-600: #155a03;
