Feat: Added side navigation mobile responsiveness.

--- a/WebApp/frontend/quiz-master/app/questions/create-question/page.module.css
+++ b/WebApp/frontend/quiz-master/app/questions/create-question/page.module.css
@@ -1,17 +1,19 @@
 .root {
-    background-color: var(--notification-color, var(--mantine-primary-color-filled));
-  
+    background-color: var(
+        --notification-color,
+        var(--mantine-primary-color-filled)
+    );
+
     &::before {
-      background-color: var(--mantine-color-white);
+        background-color: var(--mantine-color-white);
     }
-  }
-  
-  .description,
-  .title {
+}
+
+.description,
+.title {
     color: var(--mantine-color-white);
-  }
-  
-  .closeButton {
+}
+
+.closeButton {
     color: var(--mantine-color-white);
-  
-  }
+}
