Fix: Move CSS file for notification to styles folder for reusability.

--- a/WebApp/frontend/quiz-master/styles/notification.module.css
+++ b/WebApp/frontend/quiz-master/styles/notification.module.css
@@ -1,8 +1,7 @@
 .root {
-    background-color: var(
-        --notification-color,
-        var(--mantine-primary-color-filled)
-    );
+    background-color: var(--notification-color,
+            var(--mantine-primary-color-filled));
+    z-index: 1000;
 
     &::before {
         background-color: var(--mantine-color-white);
