feat: Generate .csv and pdf reports for quiz session and users. Add modal to preview quiz session and individual participant answers

--- a/WebApp/frontend/quiz-master/app/globals.css
+++ b/WebApp/frontend/quiz-master/app/globals.css
@@ -46,3 +46,22 @@
     height: 46px !important;
     padding-left: 20px !important;
 }
+
+::-webkit-scrollbar {
+    width: 0.5em;
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(243 244 246);
+    border-radius: 100vw;
+    margin-block: 0.5em;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(209 213 219);
+    border-radius: 100vw;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(156 163 175);
+}
